--- a/Frontend/src/app/components/add-new-member/add-new-member.component.html
+++ b/Frontend/src/app/components/add-new-member/add-new-member.component.html
@@ -17,7 +17,7 @@
                 <input matInput placeholder="Email" formControlName="email">
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Password" formControlName="password">
+                <input matInput placeholder="Password" type="password" formControlName="password">
             </mat-form-field>
             
             <mat-form-field>
