--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -47,7 +47,7 @@
                     </mat-menu>
 
         
-        <div class="content" style="margin-top:15vh ;">
+        <div class="content space" style="margin-top: 15vh;">
             <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
