--- a/Frontend/src/app/components/learner/learner.component.html
+++ b/Frontend/src/app/components/learner/learner.component.html
@@ -1,29 +1,5 @@
 <div class="container">
-
-<!-- <div class="row" >
-  <div class="col-sm-1 searchicon">
-    <button mat-icon-button>
-      <mat-icon>search</mat-icon>
-    </button>
-  </div>
-  <div class="col-sm-5 filter-header" style="float: right;">
-    <mat-form-field>      
-      <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="search">
-    </mat-form-field>
-  </div>
-  <div class="col-sm-6 ">
-    <button mat-raised-button style="float:right; margin-top:2vh;" (click)="showUploadCSV()"  color="warn" *ngIf="isTH">
-      <mat-icon>file_upload</mat-icon>
-       Upload        
-    </button>
-    <button mat-raised-button (click)="showAddLearner()" *ngIf="isTH" style="float:right ; margin: 2vh; background-color: #24A0ED; color: white;" >
-        <mat-icon>person_add</mat-icon>
-      Add Learner        
-    </button>
-  </div>
-</div> -->
-
-<div class="d-flex justify-content-end">
+<!-- <div class="d-flex justify-content-end">
   <div class="p-2">
     <button mat-icon-button>
     <mat-icon>search</mat-icon>
@@ -34,17 +10,46 @@
     <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="search">
   </mat-form-field>
 </div>
-<div>
+<div class="btn">
   <button mat-raised-button style="float:right; margin-top:2vh;" (click)="showUploadCSV()"  color="warn" *ngIf="isTH">
     <mat-icon>file_upload</mat-icon>
      Upload        
   </button>
 </div>
-  <div>
-    <button mat-raised-button (click)="showAddLearner()" *ngIf="isTH" style="float:right ; margin: 2vh; background-color: #24A0ED; color: white;" >
+  <div class="btn">
+    <button mat-raised-button  (click)="showAddLearner()" *ngIf="isTH" style="float:right ; margin: 2vh; background-color: #24A0ED; color: white; " >
       <mat-icon>person_add</mat-icon>
   Add Learner        
 </button>
+</div>
+</div> -->
+
+<div class="cont" fxLayout="column wrap"  style="float: right;">
+  <div fxFlex="0%" fxFlex.xs="100%" fxFlex.sm="33%" fxFlex.lg="100%"> 
+<div class="d-flex justify-content-end">
+  <div class="p-2" >
+    <button mat-icon-button>
+    <mat-icon>search</mat-icon>
+  </button>
+</div>
+</div>
+  <div fxFlex="0%" fxFlex.xs="100%" fxFlex.sm="33%" fxFlex.lg="100%" style="margin-right: 10px;">
+    <mat-form-field>      
+    <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="search">
+  </mat-form-field>
+</div>
+<div class="btn2" fxFlex="0%" fxFlex.xs="100%" fxFlex.sm="33%" fxFlex.lg="100%">
+  <button mat-raised-button style="float:right; margin-top:2vh;" (click)="showUploadCSV()"  color="warn" *ngIf="isTH">
+    <mat-icon>file_upload</mat-icon>
+     Upload        
+  </button>
+</div>
+<div class="btn2" fxFlex="0%" fxFlex.xs="100%" fxFlex.sm="33%" fxFlex.lg="100%">
+  <button mat-raised-button  (click)="showAddLearner()" *ngIf="isTH" style="float:right ; margin: 2vh; background-color: #24A0ED; color: white; " >
+    <mat-icon>person_add</mat-icon>
+Add Learner        
+</button>
+</div>
 </div>
 </div>
 
