--- a/Frontend/src/app/components/login/login.component.css
+++ b/Frontend/src/app/components/login/login.component.css
@@ -18,6 +18,19 @@ nav {
     font-weight: 700;
   }
 
+  @media only screen and (max-width: 600px) {
+	nav .brand {
+	
+		font-size: 20px;
+		font-weight: 700;
+	  }
+  }
+  @media only screen and (max-width: 600px) {
+	  .logo-header {
+		font-size: 10px !important;
+	  }
+  }
+
 header{
 	text-align: justify;
   text-justify: inter-word;
